Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -153,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T09:47:39.241768Z",
-     "start_time": "2019-04-10T09:47:39.226392Z"
+     "end_time": "2019-04-10T09:49:59.978886Z",
+     "start_time": "2019-04-10T09:49:59.958542Z"
     },
     "scrolled": false
    },
@@ -190,6 +190,9 @@
     "        self.layer  = tf.matmul(self.input,self.w) \n",
     "        self.layerA = self.a*self.act(self.b*self.layer) + self.c\n",
     "        return self.layerA\n",
+    "    \n",
+    "    def backprop_first(self):\n",
+    "        pass \n",
     "\n",
     "    def backprop(self,gradient=None,which_reg=0):\n",
     "        grad_part_1 = gradient\n",
