Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -247,17 +247,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 86,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T09:53:04.674758Z",
+     "start_time": "2019-04-10T09:53:04.668822Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.207 0.681 3.505]\n",
+      "[[-0.253 -0.903 -0.346]\n",
+      " [ 0.24   0.287 -0.927]\n",
+      " [ 0.937 -0.318  0.144]]\n",
+      "[[-0.4    0.913 -0.084]\n",
+      " [-0.765 -0.282  0.579]\n",
+      " [ 0.504  0.295  0.811]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "W = np.random.randn(3,3)\n",
+    "s, u = np.linalg.eigh(np.dot(W, W.T))\n",
+    "print(s)\n",
+    "print(u)\n",
+    "result = np.dot(np.dot(u * (1./(np.sqrt(s+1e-8))+1e-8), u.T), W)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 84,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T09:52:47.828297Z",
+     "start_time": "2019-04-10T09:52:47.821363Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "s, u = tf.linalg.eigh(W@W.T)\n",
+    "print(s)\n",
+    "print(u)\n",
+    "result = \n",
+    "tf.dot(\n",
+    "    np.dot(u * (1./(np.sqrt(s+1e-8))+1e-8), u.T), \n",
+    "    W)\n"
+   ]
   },
   {
    "cell_type": "code",
