Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -153,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 93,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T09:49:59.978886Z",
-     "start_time": "2019-04-10T09:49:59.958542Z"
+     "end_time": "2019-04-10T09:55:29.696985Z",
+     "start_time": "2019-04-10T09:55:29.678137Z"
     },
     "scrolled": false
    },
@@ -214,7 +214,15 @@
     "        adam_middle = m_hat *  learning_rate/(tf.sqrt(v_hat) + adam_e)\n",
     "        update_w.append(tf.assign(self.w,tf.subtract(self.w,adam_middle )))\n",
     "\n",
-    "        return grad_pass,update_w\n"
+    "        return grad_pass,update_w\n",
+    "    \n",
+    "    def norm(W):\n",
+    "        \n",
+    "    \n",
+    "    def sym_decorrelation(W):\n",
+    "        s, u = tf.linalg.eigh(W@W.T)\n",
+    "        result = (u * (1./(tf.sqrt(s+1e-8)+1e-8))) @ tf.transpose(u) @ W\n",
+    "        return W\n"
    ]
   },
   {
@@ -247,11 +255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 91,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T09:53:04.674758Z",
-     "start_time": "2019-04-10T09:53:04.668822Z"
+     "end_time": "2019-04-10T09:54:40.894502Z",
+     "start_time": "2019-04-10T09:54:40.887060Z"
     }
    },
    "outputs": [
@@ -259,13 +267,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.207 0.681 3.505]\n",
-      "[[-0.253 -0.903 -0.346]\n",
-      " [ 0.24   0.287 -0.927]\n",
-      " [ 0.937 -0.318  0.144]]\n",
-      "[[-0.4    0.913 -0.084]\n",
-      " [-0.765 -0.282  0.579]\n",
-      " [ 0.504  0.295  0.811]]\n"
+      "[0.016 0.75  5.007]\n",
+      "[[-0.499  0.527 -0.688]\n",
+      " [ 0.366 -0.592 -0.718]\n",
+      " [-0.786 -0.61   0.103]]\n",
+      "[[ 0.063 -0.984  0.165]\n",
+      " [ 0.9    0.128  0.417]\n",
+      " [-0.431  0.122  0.894]]\n"
      ]
     }
    ],
@@ -280,22 +288,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T09:52:47.828297Z",
-     "start_time": "2019-04-10T09:52:47.821363Z"
+     "end_time": "2019-04-10T09:54:41.276852Z",
+     "start_time": "2019-04-10T09:54:41.183322Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.016 0.75  5.007]\n",
+      "[[-0.499 -0.527  0.688]\n",
+      " [ 0.366  0.592  0.718]\n",
+      " [-0.786  0.61  -0.103]]\n",
+      "[[ 0.063 -0.984  0.165]\n",
+      " [ 0.9    0.128  0.417]\n",
+      " [-0.431  0.122  0.894]]\n"
+     ]
+    }
+   ],
    "source": [
     "s, u = tf.linalg.eigh(W@W.T)\n",
-    "print(s)\n",
-    "print(u)\n",
-    "result = \n",
-    "tf.dot(\n",
-    "    np.dot(u * (1./(np.sqrt(s+1e-8))+1e-8), u.T), \n",
-    "    W)\n"
+    "print(s.eval())\n",
+    "print(u.eval())\n",
+    "result = (u * (1./(tf.sqrt(s+1e-8)+1e-8))) @ tf.transpose(u) @ W\n",
+    "print(result.eval())"
    ]
   },
   {
