Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -217,7 +217,8 @@
     "        return grad_pass,update_w\n",
     "    \n",
     "    def norm(W):\n",
-    "        \n",
+    "        W = W/(tf.sqrt(tf.reduce_sum(W**2)+1e-8))\n",
+    "        return W\n",
     "    \n",
     "    def sym_decorrelation(W):\n",
     "        s, u = tf.linalg.eigh(W@W.T)\n",
