Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -153,13 +153,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 139,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:01:23.368127Z",
-     "start_time": "2019-04-10T10:01:23.333370Z"
+     "end_time": "2019-04-10T10:02:57.684867Z",
+     "start_time": "2019-04-10T10:02:57.666530Z"
     },
     "code_folding": [
+     31,
+     34,
      56
     ],
     "scrolled": false
@@ -179,7 +181,7 @@
     "        if outc == 1:\n",
     "            self.w = self.norm(tf.Variable(tf.random_normal([inc,outc],stddev=1,seed=2)))\n",
     "        else:\n",
-    "            self.w = self.sym_decorrelation(tf.Variable(tf.random_normal([inc,outc],stddev=1,seed=2)))\n",
+    "            self.w = tf.Variable(tf.random_normal([inc,outc],stddev=0.05,seed=2))\n",
     "        self.a = tf.Variable(tf.ones([outc]))\n",
     "        self.b = tf.Variable(tf.ones([outc]))\n",
     "        self.c = tf.Variable(tf.zeros([outc]))\n",
@@ -228,16 +230,17 @@
     "    \n",
     "    def sym_decorrelation(self,W):\n",
     "        s, u = tf.linalg.eigh(W@tf.transpose(W))\n",
-    "        result = (u * (1./(tf.sqrt(s+1e-8)+1e-8))) @ tf.transpose(u) @ W\n",
+    "        result = (u * (1./(tf.sqrt(s)+1e-8))) @ tf.transpose(u) @ W\n",
     "        return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T10:01:37.717Z"
+     "end_time": "2019-04-10T10:02:58.242352Z",
+     "start_time": "2019-04-10T10:02:57.957110Z"
     }
    },
    "outputs": [],
@@ -251,29 +254,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 143,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:01:25.565665Z",
-     "start_time": "2019-04-10T10:01:25.560210Z"
+     "end_time": "2019-04-10T10:03:36.307678Z",
+     "start_time": "2019-04-10T10:03:36.287839Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  0., -0.],\n",
-       "       [ 0.,  1., -0.],\n",
-       "       [-0., -0.,  1.]], dtype=float32)"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "te @ te.T"
+    "te.shape\n",
+    "\n",
+    "s, u = tf.linalg.eigh(te@te.T)\n",
+    "print"
    ]
   },
   {
