Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -230,7 +230,7 @@
     "    \n",
     "    def sym_decorrelation(self,W):\n",
     "        s, u = tf.linalg.eigh(W@tf.transpose(W))\n",
-    "        result = (u * (1./(tf.sqrt(s+1e-8)+1e-8))) @ tf.transpose(u) @ W\n",
+    "        result = (u * (1./(tf.sqrt(s+1e-8)+1e-8)) @ tf.transpose(u) @ W\n",
     "        return result\n"
    ]
   },
@@ -377,11 +377,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 156,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:05:28.143779Z",
-     "start_time": "2019-04-10T10:05:28.066399Z"
+     "end_time": "2019-04-10T10:07:29.437666Z",
+     "start_time": "2019-04-10T10:07:29.344444Z"
     }
    },
    "outputs": [
@@ -389,13 +389,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.  0.  0. ... -0. -0. -0.]\n",
-      " [ 0.  1.  0. ...  0.  0.  0.]\n",
-      " [ 0.  0.  1. ...  0. -0. -0.]\n",
+      "[[ 1. -0. -0. ... -0. -0.  0.]\n",
+      " [-0.  1. -0. ...  0. -0.  0.]\n",
+      " [-0. -0.  1. ... -0.  0.  0.]\n",
       " ...\n",
-      " [-0.  0.  0. ...  1. -0. -0.]\n",
-      " [-0.  0. -0. ... -0.  1.  0.]\n",
-      " [-0.  0. -0. ... -0.  0.  1.]]\n"
+      " [-0.  0. -0. ...  1.  0. -0.]\n",
+      " [-0. -0.  0. ...  0.  1.  0.]\n",
+      " [ 0.  0.  0. ... -0.  0.  1.]]\n"
      ]
     }
    ],
@@ -408,7 +408,7 @@
     "    s, u = np.linalg.eigh(np.dot(W, W.T))\n",
     "    # u (resp. s) contains the eigenvectors (resp. square roots of\n",
     "    # the eigenvalues) of W * W.T\n",
-    "    return np.dot(np.dot(u * (1./(np.sqrt(s+1e-8)+1e-8)), u.T), W)\n",
+    "    return (u * (1./(np.sqrt(s+1e-8)+1e-8))) @ u.T @ W\n",
     "\n",
     "sss = _sym_decorrelation(ss)\n",
     "print(sss.T@sss)"
