--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -153,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 170,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:02:57.684867Z",
-     "start_time": "2019-04-10T10:02:57.666530Z"
+     "end_time": "2019-04-10T10:09:22.109741Z",
+     "start_time": "2019-04-10T10:09:22.078977Z"
     },
     "code_folding": [
      31,
@@ -181,7 +181,7 @@
     "        if outc == 1:\n",
     "            self.w = self.norm(tf.Variable(tf.random_normal([inc,outc],stddev=1,seed=2)))\n",
     "        else:\n",
-    "            self.w = tf.Variable(tf.random_normal([inc,outc],stddev=0.05,seed=2))\n",
+    "            self.w = tf.Variable(self.sym_decorrelation(tf.random_normal([inc,outc],stddev=0.05,seed=2)))\n",
     "        self.a = tf.Variable(tf.ones([outc]))\n",
     "        self.b = tf.Variable(tf.ones([outc]))\n",
     "        self.c = tf.Variable(tf.zeros([outc]))\n",
@@ -230,17 +230,18 @@
     "    \n",
     "    def sym_decorrelation(self,W):\n",
     "        s, u = tf.linalg.eigh(W@tf.transpose(W))\n",
-    "        result = (u * (1./(tf.sqrt(s+1e-8)+1e-8)) @ tf.transpose(u) @ W\n",
+    "        #        (u * (1./(np.sqrt(s+1e-8)+1e-8))) @ u.T @ W\n",
+    "        result = (u * (1./(tf.sqrt(s+1e-2)+1e-2))) @ tf.transpose(u) @ W\n",
     "        return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 171,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:02:58.242352Z",
-     "start_time": "2019-04-10T10:02:57.957110Z"
+     "end_time": "2019-04-10T10:09:23.853759Z",
+     "start_time": "2019-04-10T10:09:22.362484Z"
     }
    },
    "outputs": [],
@@ -254,113 +255,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 172,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:03:47.117246Z",
-     "start_time": "2019-04-10T10:03:46.111146Z"
+     "end_time": "2019-04-10T10:09:23.935986Z",
+     "start_time": "2019-04-10T10:09:23.927057Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.\n",
-      " -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.    -0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.     0.\n",
-      "  0.     0.     0.     0.     0.     0.     0.     0.     0.38   0.39\n",
-      "  0.405  0.413  0.433  0.435  0.447  0.457  0.468  0.485  0.498  0.507\n",
-      "  0.523  0.527  0.531  0.547  0.561  0.569  0.576  0.582  0.593  0.603\n",
-      "  0.615  0.622  0.627  0.632  0.647  0.658  0.666  0.671  0.675  0.686\n",
-      "  0.687  0.699  0.71   0.713  0.74   0.746  0.751  0.761  0.768  0.784\n",
-      "  0.801  0.817  0.826  0.83   0.836  0.837  0.839  0.861  0.872  0.88\n",
-      "  0.895  0.906  0.915  0.924  0.929  0.932  0.955  0.958  0.976  0.995\n",
-      "  1.004  1.008  1.019  1.033  1.036  1.043  1.059  1.07   1.077  1.08\n",
-      "  1.096  1.113  1.128  1.134  1.143  1.151  1.162  1.173  1.194  1.198\n",
-      "  1.211  1.22   1.226  1.242  1.256  1.265  1.27   1.28   1.309  1.314\n",
-      "  1.318  1.335  1.343  1.35   1.366  1.378  1.384  1.407  1.417  1.42\n",
-      "  1.44   1.448  1.46   1.47   1.48   1.494  1.5    1.514  1.525  1.533\n",
-      "  1.543  1.549  1.565  1.586  1.603  1.61   1.628  1.636  1.652  1.682\n",
-      "  1.685  1.694  1.714  1.733  1.735  1.747  1.777  1.792  1.795  1.809\n",
-      "  1.826  1.831  1.852  1.859  1.884  1.888  1.897  1.906  1.921  1.93\n",
-      "  1.938  1.944  1.978  1.982  1.983  2.011  2.031  2.04   2.054  2.077\n",
-      "  2.088  2.115  2.122  2.137  2.154  2.172  2.194  2.205  2.219  2.233\n",
-      "  2.245  2.258  2.269  2.294  2.317  2.333  2.345  2.364  2.408  2.416\n",
-      "  2.438  2.448  2.465  2.472  2.488  2.507  2.514  2.531  2.548  2.553\n",
-      "  2.576  2.585  2.632  2.644  2.649  2.652  2.704  2.713  2.734  2.757\n",
-      "  2.764  2.782  2.811  2.834  2.851  2.854  2.883  2.9    2.92   2.938\n",
-      "  2.97   2.979  2.997  3.023  3.055  3.089  3.127  3.144  3.153  3.178\n",
-      "  3.201  3.234  3.235  3.267  3.282  3.311  3.324  3.341  3.355  3.423\n",
-      "  3.446  3.449  3.476  3.517  3.538  3.567  3.594  3.625  3.67   3.699\n",
-      "  3.735  3.74   3.778  3.797  3.849  3.861  3.897  3.928  3.943  3.993\n",
-      "  4.031  4.065  4.125  4.142  4.211  4.252  4.322  4.364  4.406  4.443\n",
-      "  4.569  4.614  4.701  4.852]\n",
-      "[[ 0.177  0.041 -0.214 ...  0.014 -0.037  0.043]\n",
-      " [-0.273 -0.082  0.263 ... -0.006 -0.027  0.008]\n",
-      " [ 0.053 -0.019 -0.088 ...  0.05  -0.005  0.019]\n",
-      " ...\n",
-      " [ 0.004  0.02   0.062 ... -0.012  0.017  0.013]\n",
-      " [ 0.016  0.034  0.032 ... -0.002 -0.007  0.039]\n",
-      " [ 0.039  0.016  0.003 ... -0.014 -0.015 -0.005]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 0.977, -0.   , -0.   , ...,  0.001, -0.001, -0.   ],\n",
+       "       [-0.   ,  0.977, -0.   , ...,  0.001, -0.001, -0.001],\n",
+       "       [-0.   , -0.   ,  0.976, ...,  0.   , -0.   , -0.001],\n",
+       "       ...,\n",
+       "       [ 0.001,  0.001,  0.   , ...,  0.976, -0.001,  0.001],\n",
+       "       [-0.001, -0.001, -0.   , ..., -0.001,  0.975, -0.   ],\n",
+       "       [-0.   , -0.001, -0.001, ...,  0.001, -0.   ,  0.976]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "te.shape\n",
-    "\n",
-    "s, u = tf.linalg.eigh(te@te.T)\n",
-    "print(s.eval())\n",
-    "print(u.eval())"
+    "te.T @ te"
    ]
   },
   {
@@ -377,25 +299,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 162,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T10:07:29.437666Z",
-     "start_time": "2019-04-10T10:07:29.344444Z"
-    }
+     "end_time": "2019-04-10T10:08:40.539707Z",
+     "start_time": "2019-04-10T10:08:40.445986Z"
+    },
+    "code_folding": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1. -0. -0. ... -0. -0.  0.]\n",
-      " [-0.  1. -0. ...  0. -0.  0.]\n",
-      " [-0. -0.  1. ... -0.  0.  0.]\n",
+      "[[ 1.  0. -0. ... -0. -0.  0.]\n",
+      " [ 0.  1.  0. ...  0. -0. -0.]\n",
+      " [-0.  0.  1. ... -0. -0. -0.]\n",
       " ...\n",
-      " [-0.  0. -0. ...  1.  0. -0.]\n",
-      " [-0. -0.  0. ...  0.  1.  0.]\n",
-      " [ 0.  0.  0. ... -0.  0.  1.]]\n"
+      " [-0.  0. -0. ...  1.  0.  0.]\n",
+      " [-0. -0. -0. ...  0.  1.  0.]\n",
+      " [ 0. -0. -0. ...  0.  0.  1.]]\n"
      ]
     }
    ],
